--- a/civic_europe/assets/scss/components/_custom_form.scss
+++ b/civic_europe/assets/scss/components/_custom_form.scss
@@ -28,8 +28,8 @@
 
     .form-control {
         border-radius: 0;
-        border-color: $ae-dark-gray;
-        background-color: $ae-light-gray;
+        border-color: $ce-dark-gray;
+        background-color: $ce-light-gray;
         box-shadow: none;
         height: 40px;
 
