--- a/civic_europe/assets/scss/components/_herounit.scss
+++ b/civic_europe/assets/scss/components/_herounit.scss
@@ -74,7 +74,7 @@
 }
 
 .herounit-title {
-    font-size: rem($ae-font-size-extra-large);
+    font-size: $ce-font-size-extra-large;
     margin: rem(0 0 10px 0);
     font-weight: bold;
     color: #fff;
