--- a/civic_europe/assets/scss/components/_journey.scss
+++ b/civic_europe/assets/scss/components/_journey.scss
@@ -28,7 +28,7 @@
 
     .co-worker {
         margin-left: rem(6px);
-        color: $ae-middle-gray;
+        color: $ce-middle-gray;
     }
 
     .co-worker-link {
@@ -66,7 +66,7 @@
         padding-bottom: rem(40px);
     }
 
-    background: linear-gradient(to bottom, $ae-lighter-gray rem(360px), #fff 0%);
+    background: linear-gradient(to bottom, $ce-lighter-gray rem(360px), #fff 0%);
 }
 
 .journey-form-btn-box {
