--- a/civic_europe/assets/scss/components/_login-register.scss
+++ b/civic_europe/assets/scss/components/_login-register.scss
@@ -7,7 +7,7 @@
 }
 
 .login-register-tabs {
-    background-color: $ae-light-gray;
+    background-color: $ce-light-gray;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     display: flex;
