--- a/civic_europe/assets/scss/components/_pagination.scss
+++ b/civic_europe/assets/scss/components/_pagination.scss
@@ -3,12 +3,12 @@
 
     li > a {
         color: $gray-dark;
-        border: solid 1px $ae-light-gray-shadow;
+        border: solid 1px $ce-light-gray-shadow;
     }
 
     .active > a {
         color: $gray-dark;
-        background-color: $ae-light-gray;
-        border: solid 1px $ae-light-gray-shadow;
+        background-color: $ce-light-gray;
+        border: solid 1px $ce-light-gray-shadow;
     }
 }
