--- a/civic_europe/assets/scss/components/_profile.scss
+++ b/civic_europe/assets/scss/components/_profile.scss
@@ -31,8 +31,8 @@
 }
 
 .profile-navbar {
-    background-color: $ae-light-gray;
-    border-bottom: 1px solid $ae-dark-gray;
+    background-color: $ce-light-gray;
+    border-bottom: 1px solid $ce-dark-gray;
 
     .nav-tabs {
         border-bottom: none;
@@ -44,7 +44,7 @@
     padding: $padding 0;
 
     .trait-icon {
-        color: $ae-middle-gray;
+        color: $ce-middle-gray;
     }
 }
 
