--- a/civic_europe/assets/scss/components/_userpicker.scss
+++ b/civic_europe/assets/scss/components/_userpicker.scss
@@ -39,7 +39,7 @@
     }
 
     &-label-detail {
-        color: $ae-middle-gray;
+        color: $ce-middle-gray;
         font-weight: normal;
     }
 
@@ -64,7 +64,7 @@
 
     &-cta {
         font-size: rem(14px);
-        color: $ae-wizard-red;
+        color: $ce-wizard-red;
         text-decoration: underline;
         text-align: right;
         flex-grow: 1;
