--- a/civic_europe/assets/scss/components/navbar.scss
+++ b/civic_europe/assets/scss/components/navbar.scss
@@ -2,7 +2,7 @@
 .navbar--default {
     color: $gray-dark;
     background-color: $white;
-    border: $ae-border--light;
+    border: $ce-border--light;
     height: $navbar-height;
     padding: 0 0.5 * $padding;
 }
