--- a/civic_europe/assets/scss/core/_buttons.scss
+++ b/civic_europe/assets/scss/core/_buttons.scss
@@ -50,7 +50,7 @@
 }
 
 .btn-filter {
-    border: 1px solid $ae-light-gray-shadow;
+    border: 1px solid $ce-light-gray-shadow;
     font-weight: normal;
     border-radius: 5px;
 }
