--- a/civic_europe/assets/scss/components/_ideas.scss
+++ b/civic_europe/assets/scss/components/_ideas.scss
@@ -10,7 +10,7 @@
 }
 
 .idealist-no-entry {
-    background-color: $ae-brand-orange;
+    background-color: $ce-brand-orange;
     margin-top: rem(20px);
     margin-left: rem(5px);
     margin-right: rem(5px);
@@ -60,9 +60,9 @@
     justify-content: space-between;
     flex-grow: 1;
 
-    background-color: $ae-light-gray;
+    background-color: $ce-light-gray;
     min-height: rem(400px);
-    box-shadow: 0 1px 0 0 $ae-light-gray-shadow;
+    box-shadow: 0 1px 0 0 $ce-light-gray-shadow;
 
     overflow-wrap: break-word;
 
@@ -85,7 +85,7 @@
 
     .idealist-footer {
         padding: rem(12px);
-        box-shadow: 0 -1px 0 0 $ae-dark-gray;
+        box-shadow: 0 -1px 0 0 $ce-dark-gray;
 
         .fa,
         .fas,
@@ -97,7 +97,7 @@
     .idealist-tile-title:hover a,
     .idealist-tile-title:focus a {
         text-decoration: none;
-        color: $ae-middle-gray;
+        color: $ce-middle-gray;
     }
 }
 
@@ -251,7 +251,7 @@
 
         margin-right: 0;
         border: none;
-        border-left: 1px solid $ae-dark-gray;
+        border-left: 1px solid $ce-dark-gray;
         border-radius: 0;
 
         color: $black;
@@ -319,7 +319,7 @@
 // -------------------- Idea Detail Tabs and Tab Content --------------------
 
 .ideadetail-tab-bar {
-    background-color: $ae-light-gray;
+    background-color: $ce-light-gray;
 
     .tabs {
         margin-top: 0;
@@ -347,11 +347,11 @@
 
 .ideadetail-info-box {
     margin-bottom: rem(10px);
-    background-color: $ae-light-gray;
+    background-color: $ce-light-gray;
     padding: rem(10px) rem(12px);
 
     &.jurystatement {
-        background-color: $ae-brand-orange;
+        background-color: $ce-brand-orange;
     }
 
     &-co-workers {
@@ -465,7 +465,7 @@
 }
 
 .winner {
-    background-color: $ae-brand-orange;
+    background-color: $ce-brand-orange;
     color: $gray-dark;
 }
 
@@ -483,13 +483,13 @@
 
     .well {
         width: 30%;
-        background-color: $ae-light-gray;
+        background-color: $ce-light-gray;
         border-radius: 0;
         border: none;
         padding: 10px;
         margin-right: 10px;
         min-height: 85px;
-        box-shadow: 0 1px 0 0 $ae-light-gray-shadow;
+        box-shadow: 0 1px 0 0 $ce-light-gray-shadow;
 
         @media screen and (max-width: $screen-sm-max) {
             min-height: 120px;
