--- a/civic_europe/assets/scss/components/_userindicator.scss
+++ b/civic_europe/assets/scss/components/_userindicator.scss
@@ -21,13 +21,13 @@
 
         .user-indicator-profile-btn,
         .dropdown-toggle {
-            background-color: $ae-light-gray;
+            background-color: $ce-light-gray;
             color: $gray-dark;
             border: none;
             height: 100%;
 
             &:hover {
-                background-color: darken($ae-light-gray, 10%);
+                background-color: darken($ce-light-gray, 10%);
             }
         }
 
@@ -35,7 +35,7 @@
             a,
             a:focus,
             a:hover {
-                border-color: $ae-dark-gray;
+                border-color: $ce-dark-gray;
             }
         }
 
@@ -50,7 +50,7 @@
             border-top-left-radius: 4px;
             border-bottom-left-radius: 4px;
 
-            border: 1px solid $ae-light-gray;
+            border: 1px solid $ce-light-gray;
 
             background: #fff center center / cover;
             display: inline-block;
@@ -62,13 +62,13 @@
         }
 
         .user-indicator-profile-btn {
-            border-right: 2px solid $ae-dark-gray;
+            border-right: 2px solid $ce-dark-gray;
             padding: 0;
         }
 
         .user-login {
             border-radius: 4px;
-            border: 2px solid $ae-dark-gray;
+            border: 2px solid $ce-dark-gray;
             background-color: $navbar-default-bg;
         }
     }
@@ -106,7 +106,7 @@
 }
 
 .user-indicator-logout-form {
-    background-color: $ae-light-gray;
+    background-color: $ce-light-gray;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
