--- a/civic_europe/assets/scss/components/_avatar.scss
+++ b/civic_europe/assets/scss/components/_avatar.scss
@@ -1,6 +1,6 @@
 .avatar-round-small {
-    width: rem(30px);
-    height: rem(30px);
+    width: 2rem;
+    height: 2rem;
     border-radius: 50%;
     display: inline-block;
     vertical-align: middle;
