--- a/civic_europe/assets/scss/components/_breadcrumps.scss
+++ b/civic_europe/assets/scss/components/_breadcrumps.scss
@@ -2,6 +2,6 @@
     a {
         color: $gray-dark;
     }
-    padding-top: rem(10px);
-    padding-bottom: rem(10px);
+    padding-top: 0.5*$spacer;
+    padding-bottom: 0.5*$spacer;
 }
