--- a/civic_europe/assets/scss/components/_delete_modal.scss
+++ b/civic_europe/assets/scss/components/_delete_modal.scss
@@ -17,7 +17,7 @@
     .modal-footer {
         border: none;
         text-align: center;
-        padding: rem(60px) 0;
+        padding: 4*$spacer 0;
 
         .row {
             padding-top: 10px;
