--- a/civic_europe/assets/scss/components/_profile.scss
+++ b/civic_europe/assets/scss/components/_profile.scss
@@ -69,6 +69,6 @@
 
     .profile-tab-content .profile-info-pane {
         display: block;
-        padding-top: rem(35px);
+        padding-top: 2*$spacer;
     }
 }
