--- a/civic_europe/assets/scss/components/_select-item.scss
+++ b/civic_europe/assets/scss/components/_select-item.scss
@@ -4,9 +4,9 @@
     // overwrite more specific styling for element in dropdown menu
     // can probably made unimportant with bootstrap update?!
     // and if we change our bootstrap-like styling in dropdowns.scss
-    padding-left: rem(30px) !important;
-    padding-top: rem(5px) !important;
-    padding-bottom: rem(5px) !important;
+    padding-left: 2*$spacer !important;
+    padding-top: 0.25*$spacer !important;
+    padding-bottom: 0.25*$spacer !important;
 
     position: relative;
 
@@ -29,6 +29,6 @@
 
 .select-item-indicator {
     position: absolute;
-    top: rem(5px);
-    left: rem(10px);
+    top: 0.25*$spacer;
+    left: 0.5*$spacer;
 }
