--- a/civic_europe/assets/scss/components/navbar.scss
+++ b/civic_europe/assets/scss/components/navbar.scss
@@ -8,7 +8,7 @@
 }
 
 .navbar-brand.navbar-brand {
-    padding: rem(10px 0 10px 0);
+    padding: 0.5$spacer 0;
 
     .navbar-brand-logo {
         height: 3rem;
