--- a/civic_europe/assets/scss/components/_blocks.scss
+++ b/civic_europe/assets/scss/components/_blocks.scss
@@ -1,6 +1,6 @@
 .block {
     padding-top: rem(20px);
-    padding-bottom: rem(30px);
+    padding-bottom: 2*$spacer;
 
     &-title {
         margin: 0;
@@ -16,12 +16,12 @@
     }
 
     &-text {
-        margin-top: rem(10px);
+        margin-top: 0.5*$spacer;
     }
 
     &-btn {
-        font-size: rem(16px);
-        padding: rem(10px 18px);
+        font-size: $font-size-md;
+        padding: 0.5*$spacer $spacer;
         max-width: 100%;
     }
 
@@ -54,7 +54,7 @@
 }
 
 .block-qa {
-    margin-bottom: rem(10px);
+    margin-bottom: 0.5*$spacer;
 
     .panel-default {
         border-radius: 5px;
@@ -112,7 +112,7 @@
             margin-bottom: 0;
         }
 
-        margin: rem(5px 15px);
+        margin: 0.25*$spacer $spacer;
         background-color: $ce-light-gray;
         box-shadow: 0 1px 0 0 $ce-light-gray-shadow;
     }
@@ -123,7 +123,7 @@
         justify-content: stretch;
         flex-grow: 1;
 
-        padding: rem(15px);
+        padding: $spacer;
     }
 
     &-text-text {
@@ -141,13 +141,13 @@
     }
 
     &-createdates {
-        margin-top: rem(10px);
+        margin-top: 0.5*$spacer;
     }
 
     &-btn {
         border-radius: 5px;
-        font-size: 16px;
-        padding: rem(10px 18px);
+        font-size: $font-size-md;
+        padding: 0.5*$spacer $spacer;
     }
 }
 
@@ -169,7 +169,7 @@
 .teasertextblock-btn {
     border-radius: 5px;
     background-color: $brand-primary;
-    height: rem(30px);
+    height: 2rem;
     max-width: 100%;
 
     @media screen and (max-width: $screen-sm) {
@@ -189,22 +189,22 @@
         text-align: center;
         font-size: 18px;
         line-height: 1.33;
-        margin-top: rem(10px);
-        margin-bottom: rem(33px);
+        margin-top: 0.5*$spacer;
+        margin-bottom: 2*$spacer;
     }
 
     .three-image-block-row {
-        padding-bottom: rem(30px);
+        padding-bottom: 2*$spacer;
     }
 
     .three-image-block-image-container {
-        height: rem(30px);
+        height: 2rem;
         display: flex;
         justify-content: flex-end;
         flex-direction: column;
 
         @media screen and (max-width: $screen-md-max) {
-            height: rem(50px);
+            height: 3rem;
         }
 
         img {
