--- a/civic_europe/assets/scss/components/_comments.scss
+++ b/civic_europe/assets/scss/components/_comments.scss
@@ -4,18 +4,17 @@
 
 .comment-box {
     & textarea {
-        margin-top: rem(10px);
+        margin-top: 0.5*$spacer;
         border-radius: 5px;
         background-color: $ce-lighter-gray;
         border: 1px solid $ce-light-gray-shadow;
-
-        @include rem(font-size, 14px);
+        font-size: $font-size-base;
     }
 
     .submit-button {
         @extend .btn;
         @extend .btn-primary;
-        margin-right: rem(5px);
+        margin-right: 0.25*$spacer;
     }
 
     .cancel-button {
@@ -25,11 +24,11 @@
 }
 
 .comment {
-    margin-top: rem(10px);
+    margin-top: 0.5*$spacer;
 
     .comment-author {
         display: inline-block;
-        margin-right: rem(10px);
+        margin-right: 0.5*$spacer;
 
         a {
             font-size: rem(16px);
@@ -40,8 +39,8 @@
         .badge-subtle {
             background-color: $ce-middle-gray;
             text-transform: uppercase;
-            padding: rem(3px) rem(6px);
-            font-size: rem(12px);
+            padding: 3px 6px;
+            font-size: $font-size-sm;
             vertical-align: middle;
             margin-left: 5px;
         }
@@ -49,7 +48,7 @@
 
     .comment-deleted-author {
         display: inline-block;
-        margin-right: rem(10px);
+        margin-right: 0.5*$spacer;
         font-size: rem(16px);
         font-weight: $demibold;
         line-height: 1.5;
@@ -91,10 +90,10 @@
         .dropdown-toggle {
             @extend .btn;
             @extend .btn-default;
-            margin-left: rem(5px);
+            margin-left: 0.25*$spacer;
             border: none;
-            height: rem(30px);
-            width: rem(30px);
+            height: 2rem;
+            width: 2rem;
             border-radius: 5px;
             padding: 0;
             text-align: center;
@@ -112,7 +111,7 @@
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 
         li.divider {
-            height: rem(1px);
+            height: 1px;
             background-color: $ce-dark-gray;
             margin: 0;
         }
@@ -128,13 +127,13 @@
             font-size: rem(14px);
             color: $gray-dark;
             text-align: left;
-            padding: rem(3px) rem(10px);
+            padding: 0.25*$spacer 0.5*$spacer;
         }
     }
 
     .navbar {
         min-height: 0;
-        padding-top: rem(10px);
+        padding-top: 0.5*$spacer;
 
         // show answers
 
@@ -172,8 +171,8 @@
             @extend .btn-default;
             background-color: $btn-default-bg;
             border: none;
-            padding: 0 rem(11px);
-            height: rem(30px);
+            padding: 0 0.75*$spacer;
+            height: 2rem;
             vertical-align: baseline;
             font-size: rem(16px);
         }
@@ -181,7 +180,7 @@
         i.fa,
         i.fas,
         i.far {
-            padding-right: rem(5px);
+            padding-right: 0.25*$spacer;
         }
     }
 }
@@ -195,18 +194,18 @@
         @extend .btn-default;
         border: none;
         padding: 0 rem(11px);
-        height: rem(30px);
+        height: 2rem;
         vertical-align: baseline;
     }
 
     .rating-up {
-        border-right: rem(1px) solid $ce-dark-gray;
+        border-right: 1px solid $ce-dark-gray;
         border-radius: 5px 0 0 5px;
 
         i.fa,
         i.fas,
         i.far {
-            padding-right: rem(5px);
+            padding-right: 0.25*$spacer;
             color: $brand-success;
         }
     }
@@ -217,7 +216,7 @@
         i.fa,
         i.fas,
         i.far {
-            padding-right: rem(5px);
+            padding-right: 0.25*$spacer;
             color: $brand-danger;
         }
     }
