--- a/civic_europe/assets/scss/components/_custom_form.scss
+++ b/civic_europe/assets/scss/components/_custom_form.scss
@@ -12,14 +12,14 @@
     }
 
     h1 {
-        margin-top: rem(10px);
+        margin-top: 0.5*$spacer;
         margin-bottom: rem(20px);
         font-size: rem(24px);
     }
 
     .form-text {
         margin-top: 0;
-        margin-bottom: rem(5px);
+        margin-bottom: 0.25*$spacer;
     }
 
     .form-group {
@@ -60,7 +60,7 @@
             background: $brand-danger;
             color: #fff;
             margin: 0;
-            padding: rem(2px 2px 2px) 2em;
+            padding: 2px;
         }
 
         .error-block:before {
@@ -97,8 +97,8 @@
 
 .form-link {
     font-weight: bold;
-    font-size: rem(16px);
-    margin-top: rem(-20px);
-    margin-bottom: rem(30px);
+    font-size: $font-size-md;
+    margin-top: -(1.25*$spacer);
+    margin-bottom: 2*$spacer;
     text-transform: capitalize;
 }
