--- a/civic_europe/assets/scss/components/_home.scss
+++ b/civic_europe/assets/scss/components/_home.scss
@@ -1,10 +1,10 @@
 .simple-page {
-    margin-top: rem(48px);
+    margin-top: 3*$spacer;
     padding-left: 0;
-    padding-bottom: rem(48px);
+    padding-bottom: 3*$spacer;
 
     h1 {
-        font-size: rem(36px);
+        font-size: $h1-font-size;
         font-weight: bold;
         margin-top: 0;
         margin-bottom: rem(20px);
@@ -20,7 +20,7 @@
 }
 
 .structured-page-sections-container {
-    margin-top: rem(48px);
+    margin-top: 3*$spacer;
     padding-left: 0;
 
     @media(max-width:$screen-sm-max) {
@@ -29,21 +29,19 @@
 }
 
 .structured-page-section {
-    // padding-top: rem($navbar-height + 48px);
-    // margin-top: rem(-$navbar-height - 48px);
-    padding-bottom: 48px;
+    padding-bottom: 3*$spacer;
 
     h2 {
         margin-top: 0;
-        margin-bottom: rem(20px);
-        font-size: rem(36px);
+        margin-bottom: 1.25*$spacer;
+        font-size: $h2-font-size;
         font-weight: bold;
     }
 }
 
 .structured-page-side-nav {
     position: fixed;
-    margin-top: rem(60px);
+    margin-top: 4*$spacer;
 
     li {
         font-size: rem(16px);
