--- a/civic_europe/assets/scss/components/_login-register.scss
+++ b/civic_europe/assets/scss/components/_login-register.scss
@@ -3,7 +3,7 @@
 }
 
 .login-register {
-    padding-top: rem(60px);
+    padding-top: 4*$spacer;
 }
 
 .login-register-tabs {
@@ -16,7 +16,7 @@
 
 .login-register-form {
     background-color: white;
-    padding: rem(40px) rem(30px);
+    padding: 2.5*$spacer 2*$spacer;
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -25,7 +25,7 @@
 
 .socialaccounts {
     text-align: center;
-    margin-top: rem(30px);
+    margin-top: 2*$spacer;
 }
 
 .socialaccounts-heading {
@@ -40,6 +40,6 @@
 }
 
 .socialaccount-provider {
-    margin-bottom: rem(10px);
+    margin-bottom: 0.5*$spacer;
     text-transform: none;
 }
